--- a/java_app.yaml
+++ b/java_app.yaml
@@ -13,7 +13,7 @@
     - name: Ensure Dockerfile is clone
       git:
        repo: https://github.com/henre1989/Dockerfile_java_app.git
-       dest: /home/server1/
+       dest: /home/server1/Dockerfile_java_app
     - name: Ensure build docker image und push to dockerhub
       docker_image:
        build:
