--- a/java_app.yaml
+++ b/java_app.yaml
@@ -17,7 +17,7 @@
     - name: Ensure python-docker is install
       apt:
        name: python-docker
-       status: present
+       state: present
     - name: Ensure build docker image und push to dockerhub
       docker_image:
        build:
