--- a/java_app.yaml
+++ b/java_app.yaml
@@ -14,15 +14,28 @@
       git:
        repo: https://github.com/henre1989/Dockerfile_java_app.git
        dest: /home/server1/Dockerfile_java_app
-    - name: Ensure python-docker is install
+    - name: Ensure python3-pip is install
       apt:
+       name: python3-pip
+       state: present
+    - name: Ensure python-docker is install
+      pip:
        name: python-docker
+       state: present
+    - name: Ensure Docker SDK for Python is install
+      pip:
+       name: docker
+       state: present
+    - name: Ensure PyYAML is install
+      pip:
+       name: PyYAML
        state: present
     - name: Ensure build docker image und push to dockerhub
       docker_image:
        build:
         path: /home/server1//Dockerfile_java_app
-       name: henre1989/java_app
+       #name: henre1989/java_app
+       name: java_app
        tag: v1
-       push: yes
+       #push: yes
        source: build
